--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <table border="0" align="center">
         <tr>
             <td align="center" style="padding: 0pt 0 15pt 0">
-                <a class="bar" href="https://tsinghua-mars-lab.github.io/FUTR3D/"><b>Webpage</b></a> |
-                <a class="bar" href="#"><b>Code</b></a> |
+                <a class="bar" href="https://tsinghua-mars-lab.github.io/futr3d/"><b>Webpage</b></a> |
+                <a class="bar" href="https://github.com/Tsinghua-MARS-Lab/futr3d"><b>Code</b></a> |
                 <a class="bar" href="https://arxiv.org/abs/2203.10642"><b>Paper</b></a>
             </td>
         </tr>
