--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
       <a href="https://tsinghua-mars-lab.github.io/HDMapNet/" class="d-inline-block p-3"><img height="100"
           src="images/hdmapnet_thumbnail.gif" style="border:1px solid" data-nothumb><br>HDMapNet</a>
       </td>
+        
+      <td>
+      BEV Vectorized Mapping<br>
+      <a href="https://tsinghua-mars-lab.github.io/vectormapnet/" class="d-inline-block p-3"><img height="100"
+          src="images/VectorMapNet_thumbnail.png" style="border:1px solid"
+          data-nothumb><br>VectorMapNet</a>
+      </td>
 
       <td>
       BEV Detection<br>
